Conduct and document responsive testing. Fix minor styling issues and change shopping cart icon on mobile navbar

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -481,3 +481,9 @@ color: #fff!important;
     font-size: 18px;
   }
 }
+
+@media (max-width: 320px) {
+  .fa-2x{
+    font-size: 1.5em!important;
+  }
+}
